# smith_waterman_fuzzy

./: CMakeLists.txt  build.sh  configure.sh  fuzzy_sw.hpp  fuzzy_sw_par.cpp  fuzzy_sw_seq.cpp  main.cpp
